--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "nkf/drom-test-1",
+    "type": "project",
     "autoload": {
         "psr-4": {
             "FileChecker\\": "src/"
@@ -12,8 +13,17 @@
         }
     ],
     "require": {
+        "php": "^8.1",
         "symfony/filesystem": "^6.4",
         "symfony/finder": "^6.4",
         "symfony/console": "^6.4"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.64"
+    },
+    "scripts": {
+        "php-cs-fixer": [
+            "./vendor/bin/php-cs-fixer fix --rules=@Symfony:risky --allow-risky=yes"
+        ]
     }
 }
